2A/05_Projet_GL/src/test/deca/context/invalid/complet/04_decl_field_type_non_def.deca
// Description :
//     decleration d'un champ avec un type de classe non definie 
// Resultats :
//    ligne 9 : identificateur non definie 
// Historique :
//  cree le 16/01/2024

class A {
    B a ; 
}